--- a/TestSecurity/src/main/resources/application.properties
+++ b/TestSecurity/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=TestSecurity
+spring.datasource.url=jdbc:mariadb://localhost:3306/study
+spring.datasource.username=root
+spring.datasource.password=1234
