--- a/TestSecurity/src/main/resources/application.properties
+++ b/TestSecurity/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=TestSecurity
 spring.datasource.url=jdbc:mariadb://localhost:3306/study
 spring.datasource.username=root
 spring.datasource.password=1234
+
+# Hibernate ddl ??... none / update(?? entity? ???? ???? ???&?? ?????? ????)
+spring.jpa.hibernate.ddl-auto=none 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
